--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-                         
+    <script defer src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>  
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">                  
     <title>Pokemon Api</title>
 </head>
 <body>
     <div class="pokedex">
-        <div class="left-container">
-            <div class="left-container_top-section">
+        <div class="top-container">
+            <div class="top-container_top-section">
                 <div class="top-large_button"></div>
                 <div class="top-small_buttons">
                     <div class="top-button_red"></div>
@@ -18,8 +19,8 @@
                     <div class="top-button_green"></div>
                 </div>
             </div>
-            <div class="left-container_main-section-container">
-                <div class="left-container_main-section">
+            <div class="top-container_main-section-container">
+                <div class="top-container_main-section">
                     <div class="main-section_white">
                         <div class="main-section_black">
                             <div class="main-screen_hide">
@@ -48,7 +49,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="left-container_controller">
+                <div class="top-container_controller">
                     <div class="controller_d-pad">
                         <div class="d-pad_top"></div>
                         <div class="d-pad_left"></div>
@@ -62,15 +63,15 @@
                     </div>
                 </div>
             </div>
-            <div class="left-container_right">
+            <div class="top-container_right">
                 <div class="left-container_hinge"></div>
                 <div class="left-container_hinge"></div>
             </div>
         </div>
     </div>
-    <div class="right-container">
-        <div class="right-container_black">
-            <div class="right-container_screen">
+    <div class="bottom-container">
+        <div class="bottom-container_black">
+            <div class="bottom-container_screen">
                 <div class="list-item"></div>
                 <div class="list-item"></div>
                 <div class="list-item"></div>
@@ -93,7 +94,7 @@
                 <div class="list-item"></div>
             </div>
         </div>
-        <div class="right-container_buttons">
+        <div class="bottom-container_buttons">
             <div class="left-button">Prev</div>
             <div class="right-button">Next</div>
         </div>
