--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                         <div class="main-section_black">
                             <div class="main-screen_hide">
                                 <div class="screen_hide">
-                                    <span class="poke_name"></span>
-                                    <span class="poke_id"></span>
+                                    <span class="poke-name"></span>
+                                    <span class="poke-id"></span>
                                 </div>
                                 <div class="screen_image">
                                     <img src="" alt="front" class="poke-front-image">
